# paro-exercise

./: .gitignore  Build.bat  CMakeLists.txt  LinuxBuild.sh  RunTests.bat  RunTests.sh  WindowsBuild.bat
application/: main.cpp
exercise1/: CMakeLists.txt  readme.txt
exercise1/include/: dayOfYear.hpp
exercise1/src/: day-of-year.cpp  dayOfYear.cpp
exercise1/ut/: day-of-year-tests.cpp  dayOfYearTests.cpp
exercise2/: CMakeLists.txt  readme.txt
exercise2/bm/: scrabbleScoreBenchmark.cpp
exercise2/include/: scrabbleScore.h
exercise2/src/: scrabbleScore.cpp
exercise2/ut/: day-of-year-tests.cpp  scrabbleScoreTests.cpp
exercise4/: gitlab-ci.md
